Update 2 to Education

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:James Madison University </b>
+								<b>Education: James Madison University
+								Class of 2023
+								Major: Integrated Sciences and Technology</b>
 							</p>
 							<p>
 								<b>Research Interests:</b>
