update 3 to educ

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education: James Madison University
-								Class of 2023
-								Major: Integrated Sciences and Technology</b>
+									<li>Class of 2023</li>
+									<li>Major: Integrated Sciences and Technology</li></b>
 							</p>
 							<p>
 								<b>Research Interests:</b>
