update 4 to educ

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education: James Madison University
-									<li>Class of 2023</li>
-									<li>Major: Integrated Sciences and Technology</li></b>
+									<ul>Class of 2023</ul>
+									<ul>Major: Integrated Sciences and Technology</ul></b>
 							</p>
 							<p>
 								<b>Research Interests:</b>
