Update 5 on educ

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education: James Madison University
-									<ul>Class of 2023</ul>
-									<ul>Major: Integrated Sciences and Technology</ul></b>
+									<dl>Class of 2023</dl>
+									<dl>Major: Integrated Sciences and Technology</dl></b>
 							</p>
 							<p>
 								<b>Research Interests:</b>
