--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education: James Madison University
-									<dl>Class of 2023</dl>
-									<dl>Major: Integrated Sciences and Technology</dl></b>
+									<ol>Class of 2023</ol>
+									<ol>Major: Integrated Sciences and Technology</ol></b>
 							</p>
 							<p>
 								<b>Research Interests:</b>
