--- a/index.html
+++ b/index.html
@@ -106,9 +106,12 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education: James Madison University
-									<ol>Class of 2023</ol>
-									<ol>Major: Integrated Sciences and Technology</ol></b>
+								<b>Education: 
+									<ul>
+										<li>James Madison University</li>
+										<li>Class of 2023</li>
+										<li>Major: Integrated Sciences and Technology</li>
+									</ul></b>
 							</p>
 							<p>
 								<b>Research Interests:</b>
