update 6.1 to educ

--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education: 
 									<ul>
-										<li>James Madison University</li>
-										<li>Class of 2023</li>
+										<li>James Madison University - Class of 2023</li>
 										<li>Major: Integrated Sciences and Technology</li>
 									</ul></b>
 							</p>
