--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									<ul>
 										<li>James Madison University - Class of 2023</li>
 										<li>Major: Integrated Sciences and Technology</li>
-											<li>Concentration: Biotechnology
+										<li>      Concentration: Biotechnology</li>
 									</ul></b>
 							</p>
 							<p>
