Updated Contact info

--- a/index.html
+++ b/index.html
@@ -158,10 +158,11 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>Email: Wapeacock3211@gmail.com </b> 
 							</p>
 							<p> 
-								<b>Address:</b> 
+								<b>Address: 889 Port Republic Road
+								            Harrisonburg, Va </b> 
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
