--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
 								<b>Email: Wapeacock3211@gmail.com </b> 
 							</p>
 							<p> 
-								<b>Address: 889 Port Republic Road
-								            Harrisonburg, Va </b> 
+								<b>Address: 889 Port Republic Road; Harrisonburg, Va 22801 </b> 
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
