--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 								</li>
 								<!-- The Instagram icon -->
 								<li>
-									<a href="#" class="icon fa-instagram">
+									<a href="https://www.instagram.com/archer_p/" class="icon fa-instagram">
 										<span class="label">Instagram</span>
 									</a>
 								</li>
