linked facebook account

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 								</li>
 								<!-- The Facebook icon -->
 								<li>
-									<a href="#" class="icon fa-facebook">
+									<a href="https://www.facebook.com/archer.peacock" class="icon fa-facebook">
 										<span class="label">Facebook</span>
 									</a>
 								</li>
