linked github account

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 								</li>
 								<!-- The GitHub icon -->
 								<li>
-									<a href="#" class="icon fa-github">
+									<a href="https://github.com/Peacocwa" class="icon fa-github">
 										<span class="label">GitHub</span>
 									</a>
 								</li>
