attempting to put the linkedin icon in

--- a/index.html
+++ b/index.html
@@ -196,13 +196,18 @@
 										<span class="label">GitHub</span>
 									</a>
 								</li>
+								<!-- The Linkedin icon -->
+								<li> 
+									<a href="#" class="icon fa-linkedin">
+										<span class="label">Linkedin</span>
+									</a>
 								<!-- 	We can add a new icon by searching on the Font Awesome website
 									for the correct class name and inserting it as a new list item.
 
 									We found "envelope" here: https://fontawesome.com/icons/envelope
 								-->
 								<!-- <li>
-									<a href="#" class="icon fa-envelope">
+									<a href="#" class="icon fa-">
 										<span class="label">Email</span>
 									</a>
 								</li> -->
