linked my linkedin account

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 								</li>
 								<!-- The Linkedin icon -->
 								<li> 
-									<a href="#" class="icon fa-linkedin">
+									<a href="https://www.linkedin.com/in/william-peacock-420633205/" class="icon fa-linkedin">
 										<span class="label">Linkedin</span>
 									</a>
 								<!-- 	We can add a new icon by searching on the Font Awesome website
