Updated Education to include my minor

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 									<ul>
 										<li>James Madison University - Class of 2023</li>
 										<li>Major: Integrated Sciences and Technology</li>
+										<li>Minor: Science, Technology, & Society
 									</ul></b>
 							</p>
 							<p>
