--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="file:///Users/archerpeacock/Downloads/Archer+Peacock+resume+2021%20(1).pdf" target="_blank">Resume</a>
+									<a href="Archer+Peacock+resume+2021%20(1).pdf" target="_blank">Resume</a>
 								</p>
 							</div>
 						</div>
