--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 									Position <br> Institution
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
-								<p>
-									<!-- Note you will want to change where this points to! -->
-									<a href="Archer+Peacock+resume+2021%20(1).pdf" target="_blank">Resume</a>
+								<p>Open a PDF file<a 
+								href="Archer+Peacock+resume+2021%20(1).pdf" target="_blank">Resumé</a>
 								</p>
 							</div>
 						</div>
