--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 									Position <br> Institution
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
-								<p>Open a PDF file<a 
-								href="Archer+Peacock+resume+2021%20(1).pdf" target="_blank">Resumé</a>
+								<p>
+									<a href="file:///Users/archerpeacock/Downloads/Archer+Peacock+resume+2021%20(1).pdf" target="_blank">Resumé</a>
 								</p>
 							</div>
 						</div>
