--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
-									<a href="file:///Users/archerpeacock/Downloads/Archer+Peacock+resume+2021%20(1).pdf" target="_blank">Resumé</a>
+									<a href="file:///Users/archerpeacock/Downloads/Resume:Coverletter/Archer+Peacock+resume+2021.pdf" target="_blank">Resumé</a>
 								</p>
 							</div>
 						</div>
@@ -161,7 +161,7 @@
 								<b>Email: Wapeacock3211@gmail.com </b> 
 							</p>
 							<p> 
-								<b>Address: 889 Port Republic Road; Harrisonburg, Va 22801 </b> 
+								<b>Address: 313 Sandalwood Drive; Richmond, Va 232229 </b> 
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
