Edited my address & tried Resumé as a JPEG

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
-									<a href="file:///Users/archerpeacock/Downloads/Resume:Coverletter/Archer+Peacock+resume+2021.pdf" target="_blank">Resumé</a>
+									<a href="Archer+Peacock+resume+2021.jpg" target="_blank">Resumé</a>
 								</p>
 							</div>
 						</div>
