--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="0.jpeg" alt=""/>
+								<img src="images/0.jpeg" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
