--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
 						<!-- Here is a the "Contact" card. -->
 						<article id="contact">
 							<h2 class="major">Contact</h2>
+							<span class="image main">
+								<img src="images/0.jpeg" alt=""/>
+							</span>
 							<p> 
 								<b>Email: Wapeacock3211@gmail.com </b> 
 							</p>
