--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<span class="image main">
-								<img src="images/0.jpeg" alt=""/>
+								<img src="images/IMG_3781.JPG" alt=""/>
 							</span>
 							<p> 
 								<b>Email: Wapeacock3211@gmail.com </b> 
