--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/0.jpeg" alt=""/>
+								<img src="images/IMG_3774.JPG" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
@@ -158,7 +158,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<span class="image main">
-								<img src="images/IMG_3781.JPG" alt=""/>
+								<img src="images/IMG_4333.jpg" alt=""/>
 							</span>
 							<p> 
 								<b>Email: Wapeacock3211@gmail.com </b> 
