--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/0.jpeg" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
@@ -158,7 +158,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<span class="image main">
-								<img src="images/IMG_4333.jpg" alt=""/>
+								<img src="images/IMG_4333 2.jpg" alt=""/>
 							</span>
 							<p> 
 								<b>Email: Wapeacock3211@gmail.com </b> 
